# report-gen

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt
Notebooks/: test.ipynb
research_analyst/Notebooks/: test.ipynb
research_analyst/logger/: __init__.py
research_analyst/utils/: model_loader.py
