[build-system]
requires = ["setuptools>=68"]         # PEP 660 editable support ke liye naya setuptools
build-backend = "setuptools.build_meta"

[project]
name = "automated-research-report-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.78",
    "langchain-google-genai==2.1.8",
    "langchain-groq==0.3.6",
    "langchain-openai==0.3.32",
    "langgraph>=0.6.8",
    "setuptools>=80.9.0",
    "structlog==25.4.0",
    "tavily-python>=0.7.12",
    "utils>=1.0.2",
    "wikipedia>=1.4.0",
]

# Optional: authors, license
authors = [{ name = "Shivpal W" }]
license = { text = "Proprietary" }

[tool.setuptools.packages.find]
where = ["research_analyst"]

